--- a/CSharp_online_skillTest/CSharp_online_skillTest/CSharp_online_skillTest.csproj
+++ b/CSharp_online_skillTest/CSharp_online_skillTest/CSharp_online_skillTest.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DRILL 1\drill1_params.cs" />
+    <Compile Include="DRILL 1\drill1_solution.cs" />
+    <Compile Include="DRILL 2\drill2_params.cs" />
+    <Compile Include="DRILL 2\drill2_solution.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
